devel
-----

* BTS-616: Added support for client tools arangoimport, arangodump,
  arangorestore, arangobench and arangoexport to handle HTTP responses when 
  they are not in JSON format (e.g. text/html).   

* Updated ArangoDB Starter to 0.15.3-preview-1.

* Remove dysfunctional CMake variable `USE_OPTIMIZE_FOR_ARCHITECTURE`.
  Architecture detection and architecture-specific optimization is now 
  performed unconditionally. It is still possible to inject a certain
  target architecture by setting the CMake variable `TARGET_ARCHITECTURE`.

* Stop calling unnecessary `/_api/wal/open-transactions` REST API before
  starting the continuous synchronization in active fail and single server
  replication. This request is unnecessary with the RocksDB storage
  engine.

* Make background calculation of SHA hashes for RocksDB .sst files less
  intrusive. The previous implementation frequently iterated over all files
  in the database directory to check if it needed to ad-hoc calculate the
  SHA hashes for .sst files it previously missed. The procedure it used 
  was to iterate over all files in the database directory and check if there
  were matching pairs of .sst files and .sha files. This was expensive,
  because a full directory iteration was performed and a lot of temporary
  strings were created for filenames and used in comparisons. This was
  especially expensive for larger deployments with lots of .sst files.
  The expensive iteration of files in the directory is now happening less
  frequently, and will not be as expensive as before if it runs.

* Fixed ES-881: Fixed LDAP global options. This needs to use the first active
  provider, not just the first provider and it should be globally disabled.

* Web UI: Fixes the loading of map tiles which are being used to display the
  query output based on a world map when using SSL encryption. This lead to not
  displaying some world map tiles correctly (OASIS-590).
