@@ -180,7 +180,8 @@ std::string to_string(ContentType type);
 enum class ContentEncoding : uint8_t {
   Identity = 0,
   Deflate = 1,
-  Gzip = 2
+  Gzip = 2,
+  Custom = 3
 };
 ContentEncoding to_ContentEncoding(std::string const& val);
 std::string to_string(ContentEncoding type);
