@@ -1,6 +1,8 @@
 devel
 -----
 
+* Fuerte: don't fall back to identity encoding in case of unknown encoding.
+
 * BTS-616: Added support for client tools arangoimport, arangodump,
   arangorestore, arangobench and arangoexport to handle HTTP responses when 
   they are not in JSON format (e.g. text/html).   
